--- a/package.json
+++ b/package.json
@@ -26,9 +26,10 @@
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "mongoose": "^7.4.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   }
-} 
+}
